Ultimate gramática
Esta es la gramática:

    1.  Σ = { 'VAR', ID, '=', 'HAZESTO', 'IF', 'ELSEIF', 'ELSE', NUM, ADDOP, MULOP, 
              '{', '}', '(', ')', COMPARISONOPERATOR, '||', '&&', NOPARESPLIS ';' }
    2.  V = { primario, declaracion, asignacion, funcion, instruccion, expression,
              term, factor, condicion, condicion2, sentencia, bucle, llamada, atributo }
    3.  Producciones:
        1.  primario → (declaracion | (llamada | asignacion))* //Esto es lo que puede haber en global
        2.  declaracion → 'VAR' asignacion 
        3.  asignacion → ID '=' ((funcion | expression) | asignacion) ;
        4.  funcion → 'HAZESTO' '(' (atributo)* ')' '{' (instruccion)* '}' ;
        5.  instruccion → ((declaracion | sentencia | bucle | llamada | asignacion) ;)*
        6.  expression → term ( ADDOP term)* 
        7.  term → factor (MULOP factor)*
        8.  factor → '(' expression ')' | NUM
        9.  condicion → parametro COMPARISONOPERATOR parametro
        10. sentencia → 'IF' (condicion2) '{' instruccion '}' 
            ('ELSEIF' (condicion) '{' instruccion '}')* ('ELSE' '{' instruccion '}')? ;
        11. bucle → 'WHILE' (condicion) '{' instruccion '}' ;
        12. llamada → ID '(' (atributo)* ')' ;
        13. parametro → expression | ID
